--- a/backend/package.json
+++ b/backend/package.json
@@ -2,14 +2,18 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "Backend code for notes app",
-  "main": "app.js",
+  "main": "server.js",
   "scripts": {
-    "start": "nodemon app.js"
+    "start": "nodemon server.js"
   },
   "author": "Rushin Shah",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.0",
     "validator": "^13.12.0"
   }
